  via mahadev)

  ZOOKEEPER-1496. Ephemeral node not getting cleared even after client has
  exited (Rakesh R via mahadev)

  ZOOKEEPER-1751. ClientCnxn#run could miss the second ping or connection get
  dropped before a ping. (Jeffrey Zhong via mahadev)

  ZOOKEEPER-1696. Fail to run zookeeper client on Weblogic application server.
  (Jeffrey Zhong via mahadev)

IMPROVEMENTS:

  ZOOKEEPER-1389. it would be nice if start-foreground used exec $JAVA
  in order to get rid of the intermediate shell process
  (Roman Shaposhnik via phunt)

  ZOOKEEPER-1377. add support for dumping a snapshot file content (similar to LogFormatter). (phunt via camille)

  ZOOKEEPER-1454. Document how to run autoreconf if cppunit is
    installed in a non-standard directory (Michi Mutsuzaki via phunt)

  ZOOKEEPER-1503. remove redundant JAAS configuration code in SaslAuthTest and
    SaslAuthFailTest (Eugene Koontz via phunt)

  ZOOKEEPER-1510. Should not log SASL errors for non-secure usage
    (Todd Lipcon via phunt)

  ZOOKEEPER-1497. Allow server-side SASL login with JAAS configuration
  to be programmatically set (rather than only by reading JAAS
  configuration file) (Matteo Bertozzi via phunt)
 
  ZOOKEEPER-1437. Client uses session before SASL authentication complete.
  (Eugene Koontz via mahadev)

  ZOOKEEPER-1361. Leader.lead iterates over 'learners' set without proper
  synchronisation. (Henry Robinson via mahadev)

Release 3.4.3 - 2012-02-06

Backward compatible changes:

BUGFIXES: 

  ZOOKEEPER-1089. zkServer.sh status does not work due to invalid
  option of nc (Roman Shaposhnik via phunt)

  ZOOKEEPER-1345. Add a .gitignore file with general exclusions and
  Eclipse project files excluded (Harsh J via phunt)

  ZOOKEEPER-1343. getEpochToPropose should check if lastAcceptedEpoch is greater or equal than epoch (fpj via breed)
  
  ZOOKEEPER-1358. In StaticHostProviderTest.java, testNextDoesNotSleepForZero tests that hostProvider.next(0) 