@@ -133,6 +133,9 @@ BUGFIXES:
   ZOOKEEPER-1696. Fail to run zookeeper client on Weblogic application server.
   (Jeffrey Zhong via mahadev)
 
+  ZOOKEEPER-1596. Zab1_0Test should ensure that the file is closed
+  (Enis Soztutar via phunt)
+
 IMPROVEMENTS:
 
   ZOOKEEPER-1389. it would be nice if start-foreground used exec $JAVA
